<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.oio.jsfexamples</groupId>
    <artifactId>FacesFlows-example</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>war</packaging>

    <name>FacesFlows-example</name>

    <properties>
        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-web-api</artifactId>
            <version>7.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
          <groupId>org.glassfish</groupId>
          <artifactId>javax.faces</artifactId>
          <version>2.2.5</version>
          <scope>provided</scope>
        </dependency>     
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                </configuration>
            </plugin>
            <plugin>
				<groupId>org.apache.openejb.maven</groupId>
				<artifactId>tomee-maven-plugin</artifactId>
				<version>1.7.1</version>
				<configuration>
					<tomeeVersion>${version.tomee}</tomeeVersion>
					<tomeeClassifier>plus</tomeeClassifier>
					<!-- <config>${project.basedir}/src/main/tomee/conf</config> -->
					<debug>false</debug>
					<!-- <target>${user.home}</target> -->
					<libs>
						<lib>org.apache.derby:derbyclient:10.8.3.0</lib>
						<lib>remove:javaee-api</lib>
						<lib>unzip:org.apache.openejb:javaee-api:7.0-SNAPSHOT:zip</lib>
						<lib>remove:myfaces-</lib>
						<!-- MyFaces implementation of the JavaServer Faces 2.2 specification, and consists of an API module (javax.faces.* classes) and an implementation module (org.apache.myfaces.* classes) -->
						<lib>org.apache.myfaces.core:myfaces-bundle:2.2.6</lib>
						<lib>remove:geronimo-jpa</lib>
						<lib>org.apache.geronimo.specs:geronimo-jpa_2.1_spec:1.0-SNAPSHOT</lib>
       					<lib>remove:openjpa-</lib>
					</libs>
					<debugPort>5005</debugPort>
					<args>-Xms128M -Xmx1024M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256m</args>
					<synchronization>
						<extensions>
							<extension>.class</extension> <!-- if you want to update each time you build with mvn compile -->
							<extension>.properties</extension>
							<extension>.xml</extension>
						</extensions>
					</synchronization>
					<reloadOnUpdate>true</reloadOnUpdate>
				</configuration>
			</plugin>
        </plugins>
    </build>

</project>
